# twig

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeLists.txt.user.d1920c1.4.8-pre1  README.md  forms.cpp  main.cpp  malasiot@160.40.51.12
include/twig/: context.hpp  date_helpers.hpp  exceptions.hpp  form.hpp  form_helper.hpp  functions.hpp  loader.hpp  normalizers.hpp  renderer.hpp  translator.hpp  validator.hpp  validators.hpp  variant.hpp  variant.hpp.old
include/twig/forms/: form_builder.hpp  normalizers.hpp  validators.hpp
src/: ast.cpp  ast.hpp  date_helpers.cpp  form.cpp  form_helper.cpp  format.cpp  functions.cpp  json_parser.cpp  loader.cpp  normalizers.cpp  parser copy.cpp  parser.cpp  parser.hpp  renderer.cpp  translator.cpp  validator.cpp  validators.cpp
src/forms/: form_builder.cpp  normalizers.cpp  validators.cpp
tests/: CMakeLists.txt  test_expressions.cpp  test_forms.cpp  test_functions.cpp  test_tags.cpp  test_translation.cpp  test_variant.cpp
tests/data/translations/: el_EL.json  en_US.json
